--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
-dist: xenial
+dist: jammy
 language: python
 python:
-  - 2.7
-  - 3.4
-  - 3.5
-  - 3.6
   - 3.7
+  - 3.8
+  - 3.9
+  - 3.10
+  - 3.11
+  - 3.12
+  - 3.13
 script: make
 install:
     - pip install -r development.txt
